Resolve bug with client menu ( Items not showing when add a new event ). 04/01/2017 12:55 PM

--- a/src/Acted/LegalDocsBundle/Resources/public/css/globals/menu.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/globals/menu.css
@@ -205,6 +205,9 @@
     transform: rotate(180deg);
     right: 0;
 }
+.dashboard.client .owl-item {
+    display: inline-block;
+}
 .dashboard.client .owl-item:hover,
 .dashboard.client .events-menu .arrows .left:hover,
 .dashboard.client .events-menu .arrows .right:hover {
